; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_110.c_usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_110.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [46 x i8] c"proftpd 1.2.7 - 1.2.9rc2 remote root exploit\0A\00", align 1
@.str.1 = private unnamed_addr constant [46 x i8] c" based on code by bkbll (bkbll@cnhonker.net)\0A\00", align 1
@.str.2 = private unnamed_addr constant [42 x i8] c" by Haggis (haggis@haggis.kicks-ass.net)\0A\00", align 1
@.str.3 = private unnamed_addr constant [64 x i8] c"--------------------------------------------------------------\0A\00", align 1
@.str.4 = private unnamed_addr constant [35 x i8] c"Usage: %s -t host -l ip [options]\0A\00", align 1
@.str.5 = private unnamed_addr constant [12 x i8] c"Arguments:\0A\00", align 1
@.str.6 = private unnamed_addr constant [27 x i8] c" -t <host> host to attack\0A\00", align 1
@.str.7 = private unnamed_addr constant [28 x i8] c" -u <username> [anonymous]\0A\00", align 1
@.str.8 = private unnamed_addr constant [36 x i8] c" -p <password> [ftp@microsoft.com]\0A\00", align 1
@.str.9 = private unnamed_addr constant [45 x i8] c" -l <local ip address> interface to bind to\0A\00", align 1
@.str.10 = private unnamed_addr constant [42 x i8] c" -s sleep for 10secs to allow GDB attach\0A\00", align 1
@.str.11 = private unnamed_addr constant [47 x i8] c" -U <path> specify upload path, eg. /incoming\0A\00", align 1
@.str.12 = private unnamed_addr constant [49 x i8] c" -P <port> port number of remote proftpd server\0A\00", align 1
@.str.13 = private unnamed_addr constant [52 x i8] c" -S <address> start at <address> when bruteforcing\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.1, i64 0, i64 0))
  %5 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.2, i64 0, i64 0))
  %6 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str.3, i64 0, i64 0))
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.4, i64 0, i64 0), i8* %7)
  %9 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.5, i64 0, i64 0))
  %10 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.6, i64 0, i64 0))
  %11 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.7, i64 0, i64 0))
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.8, i64 0, i64 0))
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.9, i64 0, i64 0))
  %14 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.10, i64 0, i64 0))
  %15 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.11, i64 0, i64 0))
  %16 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.12, i64 0, i64 0))
  %17 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.13, i64 0, i64 0))
  %18 = call i32 @exit(i32 0) #3
  unreachable
}

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
